@@ -154,6 +154,8 @@ typedef enum {mod_brush, mod_sprite, mod_alias} modtype_t;
 typedef struct qmodel_s
 {
 	char		name[MAX_QPATH];
+	unsigned int	path_id;		// path id of the game directory
+							// that this model came from
 	int		needload;		// bmodels and sprites don't cache normally
 
 	modtype_t	type;
