@@ -189,7 +189,7 @@ static qmodel_t *Mod_LoadModel (qmodel_t *mod, qboolean crash)
 //
 // load the file
 //
-	buf = FS_LoadTempFile (mod->name, NULL);
+	buf = FS_LoadTempFile (mod->name, & mod->path_id);
 	if (!buf)
 	{
 		if (crash)
