@@ -2,7 +2,7 @@
 	model.h
 	header for model loading and caching
 
-	$Id: model.h,v 1.11 2008-04-22 13:06:10 sezero Exp $
+	$Id$
 */
 
 #ifndef __HX2_MODEL_H
@@ -349,6 +349,8 @@ typedef enum {mod_brush, mod_sprite, mod_alias} modtype_t;
 typedef struct qmodel_s
 {
 	char		name[MAX_QPATH];
+	unsigned int	path_id;		// path id of the game directory
+							// that this model came from
 	int		needload;		// bmodels and sprites don't cache normally
 
 	modtype_t	type;
