@@ -4,6 +4,13 @@ Development Progress	:
 ---------------------------
 
 2010-12-29 (SVN):
+    * model.h, gl_model.h (qmodel_t): Added a path_id member to store
+      the information about the game directory from where the model is
+      loaded.
+    * model.c, gl_model.c (Mod_LoadModel): Send the path_id member of
+      the model to FS_Load* function, instead of NULL.
+
+2010-12-29 (SVN):
     * quakefs.c (searchpath_t):  Added new member `path_id', an unsigned
       int identifier assigned to the game directory. Remember that main
       <install_dir>/game1 and the unix <userdir>/game1 have the same id.
